fixed left alignment at 980px screen size

--- a/contact.html
+++ b/contact.html
@@ -39,23 +39,25 @@
 
     </header>
 
-    <section id="contact">
+    <div id="wrapper">
+        <section id="contact">
 
-        <h2>Contact</h2>
+            <h2>Contact</h2>
 
-        <form>
-            <h3>Name:</h3>
-            <input type="text" name="firstname" id="name" placeholder="Your Name Here">
+            <form>
+                <h3>Name:</h3>
+                <input type="text" name="firstname" id="name" placeholder="Your Name Here">
 
-            <h3>Email:</h3>
-            <input type="email" address="email" id="address" placeholder="name@something.com">
+                <h3>Email:</h3>
+                <input type="email" address="email" id="address" placeholder="name@something.com">
 
-            <h3>Message:</h3>
-            <textarea id="message" placeholder="Type your message here . . ."></textarea>
-            <input type="submit" value="Submit" id="button">
-        </form>
+                <h3>Message:</h3>
+                <textarea id="message" placeholder="Type your message here . . ."></textarea>
+                <input type="submit" value="Submit" id="button">
+            </form>
 
-    </section>
+        </section>
+    </div>
 
     <footer>
 
