--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </Div>
 
             <Div class="menu">
-            
+
                 <ul>
 
                     <li id="link_1"><a href="index.html">About</a></li>
@@ -39,32 +39,42 @@
 
     </header>
 
-    <section id="about">
+    <div id="wrapper">
 
-        <h2>About Me</h2>
+        <section id="about">
 
-        <article>
+            <h2>About Me</h2>
 
-            <img id="headshot" src="assets/images/headshot.jpg" alt="headshot">
+            <article>
 
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolor sed modi reprehenderit ad
-                autem nam sequi iure iste asperiores dignissimos quisquam, est reiciendis obcaecati alias perspiciatis?
-                Eos, repellendus quaerat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam debitis omnis
-                beatae voluptate a vel expedita modi mollitia consequatur odio voluptatum labore explicabo rerum aut
-                repellat laudantium doloremque, quasi voluptates! Lorem ipsum dolor sit, amet consectetur adipisicing
-                elit. Quaerat porro illum iusto illo dolor atque saepe totam voluptas obcaecati voluptatum ad excepturi
-                commodi, temporibus ipsam, reiciendis labore voluptates, corporis aut? Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Porro ex eaque doloribus eius, ducimus enim. Delectus aut perferendis
-                veniam iste dignissimos, sit itaque iure quam saepe corporis esse modi dicta. Lorem, ipsum dolor sit
-                amet consectetur adipisicing elit. Eveniet, nesciunt fuga! Necessitatibus optio debitis quisquam
-                cupiditate eos suscipit libero iste corrupti asperiores numquam, iusto deleniti? Reiciendis
-                voluptatibus reprehenderit numquam provident.
-            </p>
+                <img id="headshot" src="assets/images/headshot.jpg" alt="headshot">
 
-        </article>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolor sed modi reprehenderit
+                    ad
+                    autem nam sequi iure iste asperiores dignissimos quisquam, est reiciendis obcaecati alias
+                    perspiciatis?
+                    Eos, repellendus quaerat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam debitis
+                    omnis
+                    beatae voluptate a vel expedita modi mollitia consequatur odio voluptatum labore explicabo rerum
+                    aut
+                    repellat laudantium doloremque, quasi voluptates! Lorem ipsum dolor sit, amet consectetur
+                    adipisicing
+                    elit. Quaerat porro illum iusto illo dolor atque saepe totam voluptas obcaecati voluptatum ad
+                    excepturi
+                    commodi, temporibus ipsam, reiciendis labore voluptates, corporis aut? Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Porro ex eaque doloribus eius, ducimus enim. Delectus aut perferendis
+                    veniam iste dignissimos, sit itaque iure quam saepe corporis esse modi dicta. Lorem, ipsum dolor
+                    sit
+                    amet consectetur adipisicing elit. Eveniet, nesciunt fuga! Necessitatibus optio debitis quisquam
+                    cupiditate eos suscipit libero iste corrupti asperiores numquam, iusto deleniti? Reiciendis
+                    voluptatibus reprehenderit numquam provident.
+                </p>
 
-    </section>
+            </article>
+
+        </section>
+    </div>
 
     <div class="clear"></div>
 
