--- a/portfolio.html
+++ b/portfolio.html
@@ -39,40 +39,42 @@
 
     </header>
 
-    <section id="portfolio">
+    <div id="wrapper">
+        <section id="portfolio">
 
-        <h2>Portfolio</h2>
+            <h2>Portfolio</h2>
 
-        <div class="image_link">
+            <div class="image_link">
 
-            <div id="image_1">
-                <h4><a href="#">Hangman</a></h4>
+                <div id="image_1">
+                    <h4><a href="#">Hangman</a></h4>
+                </div>
+
+                <div id="image_2">
+                    <h4><a href="#">RPG Game</a></h4>
+                </div>
+
+                <div class="clear"></div>
+
+                <div id="image_3">
+                    <h4><a href="#">Trivia Game</a></h4>
+                </div>
+
+                <div id="image_4">
+                    <h4><a href="#">Rutgers Info Widget</a></h4>
+                </div>
+
+                <div class="clear"></div>
+
+                <div id="image_5">
+                    <h4><a href="#">Rock, Paper, Scissors</a></h4>
+                </div>
+
+                <div class="clear"></div>
             </div>
 
-            <div id="image_2">
-                <h4><a href="#">RPG Game</a></h4>
-            </div>
-
-            <div class="clear"></div>
-
-            <div id="image_3">
-                <h4><a href="#">Trivia Game</a></h4>
-            </div>
-
-            <div id="image_4">
-                <h4><a href="#">Rutgers Info Widget</a></h4>
-            </div>
-
-            <div class="clear"></div>
-
-            <div id="image_5">
-                <h4><a href="#">Rock, Paper, Scissors</a></h4>
-            </div>
-
-            <div class="clear"></div>
-        </div>
-
-    </section>
+        </section>
+    </div>
 
     <div class="clear"></div>
 
